GNOME Bugzilla – Bug 778991
Plug a mem leak in gdbusauth
Last modified: 2017-02-21 10:32:38 UTC
This happens for the following state transition: SERVER_STATE_WAITING_FOR_AUTH | v G_DBUS_AUTH_MECHANISM_STATE_REJECTED | v SERVER_STATE_WAITING_FOR_AUTH Where the previous `mech` gets overwritten.
Created attachment 346293 [details] [review] gdbusauth: plug memory leak
Tracked down using Frida, a dynamic instrumentation toolkit powered by GLib: https://gist.github.com/oleavr/a845ca9839d74c5dd2e34ef976d0d9b6
Review of attachment 346293 [details] [review]: Good catch, thanks.
Attachment 346293 [details] pushed as 8693d60 - gdbusauth: plug memory leak